force-app/main/default/objects/TransacaoGateway__c/TransacaoGateway__c.object-meta.xml
<CustomObject>
    <label>Transação Gateway</label>
    <nameField>
        <displayFormat>TRNS-{0000000}</displayFormat>
        <label>Transação Gateway</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transações Gateway</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>