force-app/main/default/objects/TransacaoGateway__c/fields/FormaPagamento__c.field-meta.xml
<CustomField>
    <fullName>FormaPagamento__c</fullName>
    <label>Forma de Pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cartão de Crédito</fullName>
            </value>
            <value>
                <fullName>Pix</fullName>
            </value>
            <value>
                <fullName>Paypal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>