force-app/main/default/objects/TransacaoGateway__c/fields/IdTransacaoGateway__c.field-meta.xml
<CustomField>
    <fullName>IdTransacaoGateway__c</fullName>
    <label>Id Registro do Gateway</label>
    <length>255</length>
    <type>Text</type>
</CustomField>