force-app/main/default/objects/TransacaoGateway__c/fields/MensagensGateway__c.field-meta.xml
<CustomField>
    <fullName>MensagensGateway__c</fullName>
    <label>Mensagens do Gateway</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>