force-app/main/default/objects/TransacaoGateway__c/fields/NomeGateway__c.field-meta.xml
<CustomField>
    <fullName>NomeGateway__c</fullName>
    <label>Gateway de Pagamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>