force-app/main/default/objects/TransacaoGateway__c/fields/Pagamento__c.field-meta.xml
<CustomField>
    <fullName>Pagamento__c</fullName>
    <label>Pagamento</label>
    <referenceTo>Pagamento__c</referenceTo>
    <relationshipLabel>Transações Gateway</relationshipLabel>
    <relationshipName>TransacesGateway</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>