force-app/main/default/objects/TransacaoGateway__c/fields/ValorTransacao__c.field-meta.xml
<CustomField>
    <fullName>ValorTransacao__c</fullName>
    <label>Valor da Transação</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>